--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,7 @@
 <html lang="en">
     <head>
         <title>PyFormat: Using % and .format for great good!</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta charset="utf-8">
         <link href="assets/css/{{ styles["style.scss"] }}" rel="stylesheet">
     </head>
