--- a/templates/index.html
+++ b/templates/index.html
@@ -46,7 +46,7 @@
                         </div>
                         <div class="output">
                             <h3>Output</h3>
-                            <pre><code>{{ example.output}}</code></pre>
+                            <pre><code>{{ example.output|lettering }}</code></pre>
                         </div>
                     <section>
                     {% endfor %}
