--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -91,6 +91,7 @@ footer {
     }
 
     i {
+        font-family: 'Source Code Pro', monospace;
         font-weight: bold;
         color: $blue;
     }
