--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,6 @@
 <html lang="en">
     <head>
-        <title>PyFormat: Using % and .format for great good!</title>
+        <title>PyFormat: Using % and .format() for great good!</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta charset="utf-8">
         <link href="assets/css/{{ styles["style.scss"] }}" rel="stylesheet">
@@ -8,7 +8,7 @@
     <body>
         <div id="page">
             <header>
-                <h1 id="logo"><b><i>Py</i>Format</b> Using <i>%</i> and <i>.format</i> for great good!</h1>
+                <h1 id="logo"><b><i>Py</i>Format</b> Using <i>%</i> and <i>.format()</i> for great good!</h1>
             </header>
             <div id="main">
                 <section id="teaser">
