Document the first test-case

--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
             <div id="main">
                 <section id="teaser">
                     <p>Python has had awesome string formatters for many years now but the documentation here was far too technical. With this site we try to show you the most common use-cases covered by the old and the new string formatting API with pratical examples.</p>
-                    <p>If you want to contribute more examples, feel free to create a pull-request on Github!</p>
+                    <p>If you want to contribute more examples, feel free to create a pull-request on <a href="https://github.com/ulope/pyformat.info">Github</a>!</p>
                 </section>
                 <section id="toc">
                     <h2>Table of Contents:</h2>
