--- a/templates/index.html
+++ b/templates/index.html
@@ -19,13 +19,15 @@
                     <h2>Table of Contents:</h2>
                     <ol>
                         {% for example in examples %}
-                        <li><a href="#{{ example.name }}">{{ example.title }}</a></li>
+                            {% if example.title %}
+                                <li><a href="#{{ example.name }}">{{ example.title }}</a></li>
+                            {% endif %}
                         {% endfor %}
                     </ol>
                 </section>
                 <section id="details">
                     {% for example in examples %}
-                    <section id="{{ example.name }}">
+                    <section id="{{ example.name }}" {% if not example.title %}class="continuation"{% endif %}>
                         <h2>{{ example.title }}</h2>
                         {% if example.details %}
                             <div class="description">{{ example.details|markdown }}</div>
@@ -55,9 +57,9 @@
                             <h3>Output</h3>
                             <pre><code>{{ example.output|lettering }}</code></pre>
                         </div>
-                    <section>
+                    </section>
                     {% endfor %}
-                <section>
+                </section>
             </div>
             <footer>
                 <p><a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.</p>
