--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,7 @@
             </header>
             <div id="main">
                 <section id="teaser">
-                    <p>Python has had awesome string formatters for many years now but the documentation here was far too technical. With this site we try to show you the most common use-cases covered by the old and the new string formatting API with pratical examples.</p>
+                    <p>Python has had awesome string formatters for many years now but the documentation on them was far too technical. With this site we try to show you the most common use-cases covered by the old and the new string formatting API with pratical examples.</p>
                     <p>If you want to contribute more examples, feel free to create a pull-request on <a href="https://github.com/ulope/pyformat.info">Github</a>!</p>
                 </section>
                 <section id="toc">
@@ -64,7 +64,7 @@
                 </section>
             </div>
             <footer>
-                <p><a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.</p>
+                <p>Curated by <a href="https://twitter.com/ulope">Ulrich Petri</a> &amp; <a href="https://zerokspot.com/">Horst Gutmann</a>
             </footer>
         </div>
     </body>
