Slightly changed intro blurb

--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,10 @@
             </header>
             <div id="main">
                 <section id="teaser">
-                    <p>Python has had awesome string formatters for many years now but the documentation on them is far too technical. With this site we try to show you the most common use-cases covered by the old and new style string formatting API with pratical examples.</p>
+                    <p>
+                        Python has had awesome string formatters for many years but the documentation on them is far too theoretic and technical.
+                        With this site we try to show you the most common use-cases covered by the old and new style string formatting API with pratical examples.
+                    </p>
                     <p>If you want to contribute more examples, feel free to create a pull-request on <a href="https://github.com/ulope/pyformat.info">Github</a>!</p>
                 </section>
                 <section id="toc">
