--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -8,6 +8,7 @@ $radius: 8px;
 
 @import "normalize";
 @import url('http://fonts.googleapis.com/css?family=Source+Sans+Pro|Source+Code+Pro');
+@import "pygments";
 
 html {
     font-family: 'Source Sans Pro', Arial, sans-serif;
