Add note about Python versions. Closes #7.

--- a/templates/index.html
+++ b/templates/index.html
@@ -16,6 +16,9 @@
                         Python has had awesome string formatters for many years but the documentation on them is far too theoretic and technical.
                         With this site we try to show you the most common use-cases covered by the old and new style string formatting API with practical examples.
                     </p>
+                    <p>
+                        If not otherwise stated all examples work with Python 2.7, 3.2, 3.3, and 3.4 without requiring any additional libraries or monkey-patching.
+                    </p>
                     <p>If you want to contribute more examples, feel free to create a pull-request on <a href="https://github.com/ulope/pyformat.info">Github</a>!</p>
                 </section>
                 <section id="toc">
