Add link to the official Python documentation. Closes #6.

--- a/templates/index.html
+++ b/templates/index.html
@@ -14,11 +14,18 @@
                 <section id="teaser">
                     <p>
                         Python has had awesome string formatters for many years but the documentation on them is far too theoretic and technical.
-                        With this site we try to show you the most common use-cases covered by the old and new style string formatting API with practical examples.
+                        With this site we try to show you the most common use-cases covered by the <a href="https://docs.python.org/2/library/stdtypes.html#string-formatting">old</a> and <a href="https://docs.python.org/3/library/string.html#string-formatting">new</a> style string formatting API with practical examples.
                     </p>
                     <p>
                         If not otherwise stated all examples work with Python 2.7, 3.2, 3.3, and 3.4 without requiring any additional libraries or monkey-patching.
                     </p>
+                    <p>
+                        Further details about these two formatting methods can be found in the official Python documentation:
+                    </p>
+                    <ul>
+                        <li><a href="https://docs.python.org/2/library/stdtypes.html#string-formatting">old style</a></li>
+                        <li><a href="https://docs.python.org/3/library/string.html#string-formatting">new style</a></li>
+                    </ul>
                     <p>If you want to contribute more examples, feel free to create a pull-request on <a href="https://github.com/ulope/pyformat.info">Github</a>!</p>
                 </section>
                 <section id="toc">
