--- a/templates/index.html
+++ b/templates/index.html
@@ -54,9 +54,18 @@
         <title>PyFormat: Using % and .format() for great good!</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta charset="utf-8">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/github-fork-ribbon-css/0.1.1/gh-fork-ribbon.min.css" />
+        <!--[if lt IE 9]>
+          <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/github-fork-ribbon-css/0.1.1/gh-fork-ribbon.ie.min.css" />
+        <![endif]-->
         <link href="assets/css/{{ styles["style.scss"] }}" rel="stylesheet">
     </head>
     <body>
+        <div class="github-fork-ribbon-wrapper right">
+            <div class="github-fork-ribbon">
+                <a href="https://github.com/ulope/pyformat.info">Contribute on GitHub</a>
+            </div>
+        </div>
         <div id="page">
             <header>
                 <h1 id="logo"><b><i>Py</i>Format</b> Using <i>%</i> and <i>.format()</i> for great good!</h1>
