Add version info to output. Closes #19.

--- a/templates/index.html
+++ b/templates/index.html
@@ -118,7 +118,10 @@
                 </section>
             </div>
             <footer>
-                <p>Curated by <a href="https://twitter.com/ulope">Ulrich Petri</a> &amp; <a href="https://zerokspot.com/">Horst Gutmann</a>
+                <p>
+                    Curated by <a href="https://twitter.com/ulope">Ulrich Petri</a> &amp; <a href="https://zerokspot.com/">Horst Gutmann</a><br>
+                    Version: <a href="https://github.com/ulope/pyformat.info/tree/{{ version.revid }}">{{ version.revid }}</a> (built at {{ version.datetime }})
+                </p>
             </footer>
         </div>
 
