Switch site to https

--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -7,7 +7,7 @@ $base: #333;
 $radius: 8px;
 
 @import "normalize";
-@import url('http://fonts.googleapis.com/css?family=Source+Sans+Pro|Source+Code+Pro');
+@import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro|Source+Code+Pro');
 @import "pygments";
 
 html {
