Add link to strftime.org

--- a/templates/index.html
+++ b/templates/index.html
@@ -119,6 +119,10 @@
             </div>
             <footer>
                 <p>
+                    You might also like <a href="http://strftime.org/">Python strftime reference</a>
+                    by <a href="https://twitter.com/mccutchen">Will McCutchen</a>
+                </p>
+                <p>
                     Curated by <a href="https://twitter.com/ulope">Ulrich Petri</a> &amp; <a href="https://zerokspot.com/">Horst Gutmann</a><br>
                     Version: <a href="https://github.com/ulope/pyformat.info/tree/{{ version.revid }}">{{ version.revid }}</a> (built at {{ version.datetime }})
                 </p>
