--- a/templates/index.html
+++ b/templates/index.html
@@ -120,7 +120,7 @@
             <footer>
                 <p>
                     You might also like <a href="http://strftime.org/">Python strftime reference</a>
-                    by <a href="https://twitter.com/mccutchen">Will McCutchen</a>
+                    by <a href="https://twitter.com/mccutchen">Will McCutchen</a>.
                 </p>
                 <p>
                     Curated by <a href="https://twitter.com/ulope">Ulrich Petri</a> &amp; <a href="https://zerokspot.com/">Horst Gutmann</a><br>
