--- a/templates/blocks/example_block.html
+++ b/templates/blocks/example_block.html
@@ -1,5 +1,5 @@
 {% if this.description %}
-    <p>{{ this.description }}</p>
+    <div class="description">{{ this.description }}</div>
 {% endif %}
 <ul>
     <li>{{ this.availability }}</li>
