--- a/templates/blocks/result_block.html
+++ b/templates/blocks/result_block.html
@@ -1,2 +1,4 @@
-<h3>Result</h3>
-{{ this.result }}
+<div class="output">
+    <h3>Output</h3>
+    <pre><code>{% for l in this.result %}<i>{{ l }}</i>{% endfor %}</code></pre>
+</div>
